--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.4",
     "classnames": "^2.5.1",
     "formik": "^2.4.6",
+    "libphonenumber-js": "^1.12.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-phone-input-2": "^2.15.1",
